@@ -277,12 +277,7 @@ AnyServer::~AnyServer () {
 // -----------------------------------------------------------------------------
 
 ////////////////////////////////////////////////////////////////////////////////
-/// @addtogroup Rest
-/// @{
-////////////////////////////////////////////////////////////////////////////////
-
-////////////////////////////////////////////////////////////////////////////////
-/// @brief start the server
+/// @brief starts the server
 ////////////////////////////////////////////////////////////////////////////////
 
 int AnyServer::start () {
@@ -317,8 +312,14 @@ int AnyServer::start () {
 }
 
 ////////////////////////////////////////////////////////////////////////////////
-/// @}
+/// @brief begins shutdown sequence
 ////////////////////////////////////////////////////////////////////////////////
+
+void AnyServer::beginShutdown () {
+  if (_applicationServer != 0) {
+    _applicationServer->beginShutdown();
+  }
+}
 
 // -----------------------------------------------------------------------------
 // --SECTION--                                                 protected methods
