@@ -53,9 +53,8 @@ namespace triagens {
 ////////////////////////////////////////////////////////////////////////////////
 
     class AnyServer {
-      public:
-        AnyServer (AnyServer const&);
-        AnyServer& operator= (AnyServer const&);
+      AnyServer (AnyServer const&);
+      AnyServer& operator= (AnyServer const&);
 
 ////////////////////////////////////////////////////////////////////////////////
 /// @}
@@ -100,10 +99,16 @@ namespace triagens {
       public:
 
 ////////////////////////////////////////////////////////////////////////////////
-/// @brief start the server
+/// @brief starts the server
 ////////////////////////////////////////////////////////////////////////////////
 
         int start ();
+
+////////////////////////////////////////////////////////////////////////////////
+/// @brief begins shutdown sequence
+////////////////////////////////////////////////////////////////////////////////
+
+        void beginShutdown ();
 
 ////////////////////////////////////////////////////////////////////////////////
 /// @}
